@@ -1,5 +1,6 @@
 package com.devnotfound.talenthub.config;
 
+import com.auth0.jwt.interfaces.DecodedJWT;
 import com.devnotfound.talenthub.service.TokenService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -7,12 +8,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter {
@@ -21,15 +23,23 @@ public class JwtFilter extends OncePerRequestFilter {
     private TokenService tokenService;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
-        String path = request.getRequestURI();
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain) throws ServletException, IOException {
 
-        if (path.equals("/auth/gerarToken")
-        || path.startsWith("/swagger-ui")
-        || path.startsWith("/v2/api-docs")
-        || path.startsWith("/v3/api-docs")
-        || path.equals("/swagger-resources")
-        || path.equals("webjars")) {
+        String path = request.getRequestURI();
+        String method = request.getMethod();
+
+        // rotas públicas
+        if (path.equals("/auth/login")
+        		 || (path.equals("/api/customers") && "POST".equalsIgnoreCase(method))
+                 || (path.equals("/api/customers/reset-password") && "PATCH".equalsIgnoreCase(method))
+                 || path.startsWith("/swagger-ui")
+                 || path.startsWith("/v2/api-docs")
+                 || path.startsWith("/v3/api-docs")
+                 || path.startsWith("/swagger-resources")
+                 || path.startsWith("/webjars")) {
+
             filterChain.doFilter(request, response);
             return;
         }
@@ -37,20 +47,31 @@ public class JwtFilter extends OncePerRequestFilter {
         String authorizationHeader = request.getHeader("Authorization");
 
         if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
-            // pegar o que vier depois da palavra Bearer
-            // substring = recortar a string, no caso do 7 em diante
+
             String token = authorizationHeader.substring(7);
 
             try {
-                var jwtValidador = tokenService.verificarToken(token);
+                DecodedJWT jwt = tokenService.verifyToken(token); //verificação do token, se existe no banco, verifica assinatura, verifica se expirou
 
-                String email = jwtValidador.getSubject();
+                String email = jwt.getSubject(); //guarda o JSON chave = sub = email e valor = cliente@email.com
+                String role = jwt.getClaim("role").asString(); //pega o claim do role, se é role = cliente ou role = usuario
+                
+                if (role == null || role.isBlank()) { //verifica se o role existe e se o token não tiver role, é considerado inválido
+                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    response.getWriter().write("Token sem role");
+                    return;
+                }
 
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(token, null, Collections.emptyList());
-                SecurityContextHolder.getContext().setAuthentication(auth);
-            } catch (Exception e) {
-                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                response.getWriter().write("Token invalido");
+                var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role)); //o springSecurity exige prefixo nas permissões
+
+                UsernamePasswordAuthenticationToken auth =
+                        new UsernamePasswordAuthenticationToken(email, null, authorities); //o spring cria um objeto representando usuário logado no sistema
+
+                SecurityContextHolder.getContext().setAuthentication(auth); //o springSecurity passa a saber que o usuário ou cliente está autenticado
+
+            } catch (Exception e) { //tratamento de erro
+                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED); //401 status
+                response.getWriter().write("Token inválido!"); 
                 return;
             }
         }
